--- a/pelican/migration/build-pelican.yml
+++ b/pelican/migration/build-pelican.yml
@@ -6,8 +6,10 @@ on:
     branches: [ "dfoulks/pelican_gha" ]
 
   workflow_dispatch:
+env:
+  LIBCMARKDIR: /home/runner/work/infrastructure-website/infrastructure-website/cmark-gfm-0.28.3.gfm.12/lib
 jobs:
-  build:
+  build-pelican:
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
@@ -16,10 +18,29 @@ jobs:
           repository: ''
           ref: 'dfoulks/pelican_gha'
       - name: Install Pelican
-        run: pip3 install pelican markdown ghp-import
+        run: pip3 install pelican markdown ghp-import bs4
+      # Optionally, if your website uses the gfm plugin uncomment the GFM blocks
+      #########################
+      # START BUILD GFM BLOCK #
+      #########################
+      - name: fetch libcmark-gfm.so buildscript
+        run: wget https://raw.githubusercontent.com/apache/infrastructure-pelican/master/bin/build-cmark.sh
+      - name: build libcmark-gfm.so
+        run: /bin/bash ./build-cmark.sh
+      #######################
+      # END BUILD GFM BLOCK #
+      #######################
       - name: Generate website from markdown
         run: python3 -m pelican content -o output
         working-directory: '/home/runner/work/infrastructure-website/infrastructure-website'
+      ###########################
+      # START GFM CLEANUP BLOCK #
+      ###########################
+      - name: Clean up libcmark-gfm artifacts
+        run: rm -rf $(dirname $(echo $LIBCMARKDIR)) build-cmark.sh "$(dirname $(echo $LIBCMARKDIR)).orig.tar.gz"
+      #########################
+      # END GFM CLEANUP BLOCK #
+      #########################
       - name: Open a PR against the staging branch
         uses: peter-evans/create-pull-request@v6.0.5
         with:
