--- a/pelican/migration/build-pelican.yml
+++ b/pelican/migration/build-pelican.yml
@@ -1,10 +1,9 @@
 name: Build a Pelican Website
 on:
   push:
-    branches: [ "dfoulks/pelican_gha" ]
-  pull_request:
-    branches: [ "dfoulks/pelican_gha" ]
-
+    branches: [ "dfoulks/pelican_gha", "dfoulks/gha-site" ]
+    paths-ignore:
+      - 'output/**'
   workflow_dispatch:
 env:
   LIBCMARKDIR: /home/runner/work/infrastructure-website/infrastructure-website/cmark-gfm-0.28.3.gfm.12/lib
@@ -19,7 +18,7 @@ jobs:
           ref: 'dfoulks/pelican_gha'
       - name: Install Pelican
         run: pip3 install pelican markdown ghp-import bs4
-      # Optionally, if your website uses the gfm plugin uncomment the GFM blocks
+      # Optionally, if your website uses the gfm plugin uncomment the GFM block
       #########################
       # START BUILD GFM BLOCK #
       #########################
@@ -33,14 +32,6 @@ jobs:
       - name: Generate website from markdown
         run: python3 -m pelican content -o output
         working-directory: '/home/runner/work/infrastructure-website/infrastructure-website'
-      ###########################
-      # START GFM CLEANUP BLOCK #
-      ###########################
-#      - name: Clean up libcmark-gfm artifacts
-#        run: rm -rf $(dirname $(echo $LIBCMARKDIR)) build-cmark.sh "$(dirname $(echo $LIBCMARKDIR)).orig.tar.gz"
-      #########################
-      # END GFM CLEANUP BLOCK #
-      #########################
       - name: Open a PR against the staging branch
         uses: peter-evans/create-pull-request@v6.0.5
         with:
@@ -48,4 +39,6 @@ jobs:
           commit-message: GitHub Actions Generated Pelican Build
           title: Generated Pelican Output
           body: output generated
-          branch: dfoulks/gha-site
+          add-paths: |
+            output/
+          base: dfoulks/gha-site
