--- a/pelican/migration/build-pelican.yml
+++ b/pelican/migration/build-pelican.yml
@@ -1,12 +1,8 @@
 name: Build a Pelican Website
 on:
   push:
-    branches: [ "dfoulks/pelican_gha", "dfoulks/gha-site" ]
-    paths-ignore:
-      - 'output/**'
+    branches: [ "dfoulks/pelican-gha" ]
   workflow_dispatch:
-env:
-  LIBCMARKDIR: /home/runner/work/infrastructure-website/infrastructure-website/cmark-gfm-0.28.3.gfm.12/lib
 jobs:
   build-pelican:
     runs-on: ubuntu-latest
@@ -15,23 +11,24 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: ''
-          ref: 'dfoulks/pelican_gha'
+          ref: 'dfoulks/pelican-gha'
       - name: Install Pelican
         run: pip3 install pelican markdown ghp-import bs4
       # Optionally, if your website uses the gfm plugin uncomment the GFM block
       #########################
       # START BUILD GFM BLOCK #
       #########################
-#      - name: fetch libcmark-gfm.so buildscript
-#        run: wget https://raw.githubusercontent.com/apache/infrastructure-pelican/master/bin/build-cmark.sh
-#      - name: build libcmark-gfm.so
-#        run: /bin/bash ./build-cmark.sh
+      - name: fetch libcmark-gfm.so buildscript
+        run: wget https://raw.githubusercontent.com/apache/infrastructure-pelican/master/bin/build-cmark.sh
+      - name: build libcmark-gfm.so
+        run: /bin/bash ./build-cmark.sh
       #######################
       # END BUILD GFM BLOCK #
       #######################
       - name: Generate website from markdown
-        run: python3 -m pelican content -o output
-        working-directory: '/home/runner/work/infrastructure-website/infrastructure-website'
+        run: /usr/bin/env python3 -m pelican content -o output
+        env:
+          LIBCMARKDIR: cmark-gfm-0.28.3.gfm.12/lib
       - name: Open a PR against the staging branch
         uses: peter-evans/create-pull-request@v6.0.5
         with:
