--- a/build-pelican/action.yml
+++ b/build-pelican/action.yml
@@ -1,11 +1,11 @@
 name: Build a Pelican Website
 description: "Generate a Pelican website from Markdown"    
 inputs:
-  dest_branch:
+  dest-branch:
     description: "Pelican Output branch"
     required: true
     default: "asf-site"
-  uses_gfm:
+  uses-gfm:
     description: "Uses GitHub Flavored Markdown"
     required: false
     default: false
@@ -16,15 +16,15 @@ inputs:
         run: pip3 install pelican markdown ghp-import bs4 ezt
       - name: fetch libcmark-gfm.so buildscript
         run: wget https://raw.githubusercontent.com/apache/infrastructure-pelican/master/bin/build-cmark.sh
-        if: ${{ inputs.uses_gfm }}
+        if: ${{ inputs.uses-gfm }}
       - name: build libcmark-gfm.so
         run: /bin/bash ./build-cmark.sh
-        if: ${{ inputs.uses_gfm }}
+        if: ${{ inputs.uses-gfm }}
       - name: Generate website from markdown
         run: /usr/bin/env python3 -m pelican content -o output
         env:
           LIBCMARKDIR: cmark-gfm-0.28.3.gfm.12/lib
-        if: ${{ inputs.uses_gfm }}
+        if: ${{ inputs.uses-gfm }}
       - name: Generate website from markdown
         run: /usr/bin/env python3 -m pelican content -o output
         if: vars.uses_gfm == false
@@ -37,4 +37,4 @@ inputs:
           body: output generated
           add-paths: |
             output/
-          base: ${{ inputs.dest_branch }}
+          base: ${{ inputs.dest-branch }}
