--- a/build-pelican/action.yml
+++ b/build-pelican/action.yml
@@ -1,7 +1,7 @@
 name: Build a Pelican Website
 description: "Generate a Pelican website from Markdown"    
 inputs:
-  token: "GitHub Token"
+  token:
     description: "Set to ${{ secrets.GITHUB_TOKEN }} in the workflow"
     required: true
   dest-branch:
