--- a/build-pelican/action.yml
+++ b/build-pelican/action.yml
@@ -2,7 +2,7 @@ name: Build a Pelican Website
 description: "Generate a Pelican website from Markdown"    
 inputs:
   token:
-    description: "Set to ${{ secrets.GITHUB_TOKEN }} in the workflow"
+    description: 'Set to ${{ secrets\.GITHUB_TOKEN }} in the workflow'
     required: true
   dest-branch:
     description: "Pelican Output branch"
@@ -17,20 +17,24 @@ runs:
   steps:
     - name: Install Pelican
       run: pip3 install pelican markdown ghp-import bs4 ezt
+      shell: bash
     - name: fetch libcmark-gfm.so buildscript
       run: wget https://raw.githubusercontent.com/apache/infrastructure-pelican/master/bin/build-cmark.sh
+      shell: bash
       if: ${{ github.event.inputs.uses-gfm }}
     - name: build libcmark-gfm.so
       run: /bin/bash ./build-cmark.sh
+      shell: bash
       if: ${{ github.event.inputs.uses-gfm }}
     - name: Generate website from markdown
       run: /usr/bin/env python3 -m pelican content -o output
+      shell: bash
       env:
         LIBCMARKDIR: cmark-gfm-0.28.3.gfm.12/lib
       if: ${{ github.event.inputs.uses-gfm }}
-      if: ${{ uses-gfm }}
     - name: Generate website from markdown
       run: /usr/bin/env python3 -m pelican content -o output
+      shell: bash
       if: ${{ github.event.inputs.uses-gfm }} == false
     - name: Open a PR against the staging branch
       uses: peter-evans/create-pull-request@v6.0.5
