--- a/build-pelican/action.yml
+++ b/build-pelican/action.yml
@@ -4,11 +4,11 @@ inputs:
   token:
     description: 'Set to secrets.GITHUB_TOKEN in the workflow'
     required: true
-  dest-branch:
+  destination:
     description: "Pelican Output branch"
     required: true
     default: "asf-site"
-  uses-gfm:
+  gfm:
     description: "Uses GitHub Flavored Markdown"
     required: false
     default: 'false'
@@ -23,25 +23,25 @@ runs:
     - name: fetch libcmark-gfm.so buildscript
       run: wget https://raw.githubusercontent.com/apache/infrastructure-pelican/master/bin/build-cmark.sh -O ./build-cmark.sh
       shell: bash
-      if: ${{ github.event.inputs.uses-gfm == 'true' }}
+      if: ${{ github.event.inputs.gfm == 'true' }}
 
     - name: build libcmark-gfm.so
       run: /bin/bash ./build-cmark.sh
       shell: bash
-      if: ${{ github.event.inputs.uses-gfm == 'true' }}
+      if: ${{ github.event.inputs.gfm == 'true' }}
 
     - name: Generate website from markdown
       run: /usr/bin/env python3 -m pelican content -o output
       shell: bash
       env:
         LIBCMARKDIR: "cmark-gfm-0.28.3.gfm.12/lib"
-      if: ${{ github.event.inputs.uses-gfm == 'true' }}
+      if: ${{ github.event.inputs.gfm == 'true' }}
 
     # Alternatively, use regular pelican
     - name: Generate website from markdown
       run: /usr/bin/env python3 -m pelican content -o output
       shell: bash
-      if: ${{ github.event.inputs.uses-gfm == 'false' }}
+      if: ${{ github.event.inputs.gfm == 'false' }}
 
     - name: Open a PR against the staging branch
       uses: peter-evans/create-pull-request@v6.0.5
@@ -52,4 +52,4 @@ runs:
         body: output generated
         add-paths: |
           output/
-        base: ${{ github.event.inputs.dest-branch }}
+        base: ${{ github.event.inputs.destination }}
