--- a/build-pelican/action.yml
+++ b/build-pelican/action.yml
@@ -23,33 +23,33 @@ runs:
     - name: fetch libcmark-gfm.so buildscript
       run: wget https://raw.githubusercontent.com/apache/infrastructure-pelican/master/bin/build-cmark.sh -O ./build-cmark.sh
       shell: bash
-      if: ${{ github.event.inputs.gfm == 'true' }}
+      if: ${{ inputs.gfm == 'true' }}
 
     - name: build libcmark-gfm.so
       run: /bin/bash ./build-cmark.sh
       shell: bash
-      if: ${{ github.event.inputs.gfm == 'true' }}
+      if: ${{ inputs.gfm == 'true' }}
 
     - name: Generate website from markdown
       run: /usr/bin/env python3 -m pelican content -o output
       shell: bash
       env:
         LIBCMARKDIR: "cmark-gfm-0.28.3.gfm.12/lib"
-      if: ${{ github.event.inputs.gfm == 'true' }}
+      if: ${{ inputs.gfm == 'true' }}
 
     # Alternatively, use regular pelican
     - name: Generate website from markdown
       run: /usr/bin/env python3 -m pelican content -o output
       shell: bash
-      if: ${{ github.event.inputs.gfm == 'false' }}
+      if: ${{ inputs.gfm == 'false' }}
 
     - name: Open a PR against the staging branch
       uses: peter-evans/create-pull-request@v6.0.5
       with:
-        token: ${{ github.event.inputs.token }}
+        token: ${{ inputs.token }}
         commit-message: GitHub Actions Generated Pelican Build
         title: Generated Pelican Output
         body: output generated
         add-paths: |
           output/
-        base: ${{ github.event.inputs.destination }}
+        base: ${{ inputs.destination }}
