--- a/build-pelican/action.yml
+++ b/build-pelican/action.yml
@@ -32,14 +32,14 @@ runs:
 
     - name: Fetch plugin directory from pelicanconf.py
       id: plugin-paths
-      run: /usr/bin/env python3 -m pelican --print-settings PLUGIN_PATHS
+      run: echo "PLUGIN_PATHS=`/usr/bin/env python3 -m pelican --print-settings PLUGIN_PATHS`" >> "$GITHUB_OUTPUT"
       shell: bash
       env: # in case we are using GFM (otherwise ignored)
         LIBCMARKDIR: "cmark-gfm-0.28.3.gfm.12/lib"
 
     - name: Fetch plugin list from pelicanconf.py
       id: plugins-used
-      run: /usr/bin/env python3 -m pelican --print-settings PLUGINS
+      run: echo "PLUGINS=`/usr/bin/env python3 -m pelican --print-settings PLUGINS`" >> "$GITHUB_OUTPUT"
       shell: bash
       env: # in case we are using GFM (otherwise ignored)
         LIBCMARKDIR: "cmark-gfm-0.28.3.gfm.12/lib"
