--- a/build-pelican/action.yml
+++ b/build-pelican/action.yml
@@ -32,14 +32,14 @@ runs:
 
     - name: Fetch plugin directory from pelicanconf.py
       id: plugin-paths
-      run: echo "plugpaths=`/usr/bin/env python3 -m pelican --print-settings PLUGIN\_PATHS`" >> "$GITHUB_OUTPUT"
+      run: echo "plugpaths=`/usr/bin/env python3 -m pelican --print-settings | grep PLUGIN_PATHS | awk -F': ' '{print $NF}'`" >> "$GITHUB_OUTPUT"
       shell: bash
       env: # in case we are using GFM (otherwise ignored)
         LIBCMARKDIR: "cmark-gfm-0.28.3.gfm.12/lib"
 
     - name: Fetch plugin list from pelicanconf.py
       id: plugins-used
-      run: echo "plugins=`/usr/bin/env python3 -m pelican --print-settings PLUGINS`" >> "$GITHUB_OUTPUT"
+      run: echo "plugins=`/usr/bin/env python3 -m pelican --print-settings | grep PLUGINS | awk -F': ' '{print $NF}'`" >> "$GITHUB_OUTPUT"
       shell: bash
       env: # in case we are using GFM (otherwise ignored)
         LIBCMARKDIR: "cmark-gfm-0.28.3.gfm.12/lib"
