--- a/build-pelican/action.yml
+++ b/build-pelican/action.yml
@@ -6,31 +6,35 @@ inputs:
     required: true
     default: 'asf-site'
   output:
-    description: "Output directory"
+    description: "Output directory in output branch"
     required: false
     default: 'output'
   image:
     description: "Docker Image"
     required: false
     default: 'ghcr.io/apache/infrastructure-pelican:latest'
+  tempdir:
+    description: "Name of temporary directory. Must not exist in source or output branches."
+    required: false
+    default: 'output.tmp'
 runs:
   using: "composite"
   steps:
     - uses: actions/checkout@v4
       with:
-        filter: tree:0
-        fetch-depth: 0
+        filter: tree:0 # This reduces download time whilst still giving access to other branches
+        fetch-depth: 0 # Required for multi-branch checkouts
         show-progress: false # does not yet work for checkout unfortunately
     - name: Identify Committer
       shell: bash
       run: |
         git config --global user.email "users@infra.apache.org"
         git config --global user.name "Build Pelican (action)"
-    - name: Run Pelican
+    - name: Run Docker Pelican build => ${{ inputs.tempdir }}
       shell: bash
       run: |
-        time docker run --quiet -v /tmp:/out -v $PWD:/site --entrypoint bash ${{ inputs.image }} \
-          -c "source /tmp/pelican-asf/LIBCMARKDIR.sh && python3 -m pelican content -o /out/output"
+        docker run --quiet -v $PWD:/site --entrypoint bash ${{ inputs.image }} \
+          -c "source /tmp/pelican-asf/LIBCMARKDIR.sh && python3 -m pelican content -o ${{ inputs.tempdir }}"
     - name: Checkout site deploy branch
       shell: bash
       run: |
@@ -48,13 +52,14 @@ runs:
           git checkout origin/${{ github.ref_name }} -- .asf.yaml
           git add .asf.yaml -f
         fi
-    - name: Commit change
+    - name: Commit changes from ${{ inputs.tempdir }}
       shell: bash
       run: |
         # Remove all existing output so deletions will be captured
-        rm -rf output
-        git rm --quiet -r --ignore-unmatch --cached output/*
-        cp -rT /tmp/output ${{ inputs.output }}
+        rm -rf ${{ inputs.output }}
+        git rm --quiet -r --ignore-unmatch --cached ${{ inputs.output }}/*
+        # replace with generated output
+        mv ${{ inputs.tempdir }} ${{ inputs.output }}
         git diff # Show changes
         git add ${{ inputs.output }}
         git status
