--- a/build-pelican/action.yml
+++ b/build-pelican/action.yml
@@ -16,7 +16,7 @@ inputs:
   tempdir:
     description: "Temporary Directory name"
     required: false
-    default: 'output.tmp'
+    default: '.output.tmp'
 runs:
   using: "composite"
   steps:
@@ -69,6 +69,21 @@ runs:
     - name: Commit Directly to the branch
       shell: bash
       run: |
+        git.config --global user.email "users@infra.apache.org"
+        git.config --global user.name "Build Pelican (action)"
+        # Check for destination branch
+        if git checkout ${{ inputs.destination }}
+        then 
+          git pull origin ${{ inputs.destination }}
+        else
+          # if none, create it.
+          echo "branch ${{ inputs.destination }} is new; create basic site"
+          git config --global --add --bool push.autoSetupRemote true
+          git checkout --orphan ${{ inputs.destination }} -f
+          git rm -rf .
+          git checkout origin/${{ github.ref_name }} -- .asf.yaml
+          git add .asf.yaml -f
+        fi
         # Remove all existing output so deletions will be captured
         rm -rf ${{ inputs.output }}
         git rm --quiet -r --ignore-unmatch --cached ${{ inputs.output }}/*
