--- a/build-pelican/action.yml
+++ b/build-pelican/action.yml
@@ -72,7 +72,8 @@ runs:
         git config --global user.email "users@infra.apache.org"
         git config --global user.name "Build Pelican (action)"
         # Check for destination branch
-        if git checkout ${{ inputs.destination }}
+        git checkout ${{ inputs.destination }}
+        if [[ "$?" == "0" ]]
         then 
           git pull origin ${{ inputs.destination }}
         else
