--- a/build-pelican/action.yml
+++ b/build-pelican/action.yml
@@ -68,6 +68,7 @@ runs:
 
     - name: Commit Directly to the branch
       shell: bash
+      continue-on-error: true
       run: |
         git config --global user.email "users@infra.apache.org"
         git config --global user.name "Build Pelican (action)"
