trying with pre-check

--- a/build-pelican/action.yml
+++ b/build-pelican/action.yml
@@ -72,8 +72,9 @@ runs:
         git config --global user.email "private@infra.apache.org"
         git config --global user.name "Build Pelican (action)"
         # Check for destination branch
-        if [[ "$(git checkout ${{ inputs.destination }} &>2; echo $?)" == "0" ]]
-        then 
+        if [ $(git branch -av | grep -q ${{ inputs.destination }}; echo $?) = 0 ]
+        then
+          git checkout ${{ inputs.destination }}
           git pull origin ${{ inputs.destination }}
         else
           # if none, create it.
