--- a/build-pelican/action.yml
+++ b/build-pelican/action.yml
@@ -71,10 +71,8 @@ runs:
       run: | 
         git config --global user.email "private@infra.apache.org"
         git config --global user.name "Build Pelican (action)"
-        # Check for destination branch
-        if [ $(git branch -av | grep -q ${{ inputs.destination }}; echo $?) = 0 ]
+        if git checkout ${{ inputs.destination }}
         then
-          git checkout ${{ inputs.destination }}
           git pull origin ${{ inputs.destination }}
         else
           # if none, create it.
